<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="16dp"
    app:cardBackgroundColor="?attr/colorSurface"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/statistics_inventory_warning_title"
            android:textColor="@color/orange_coral"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_info"
            app:drawableTint="@color/orange_coral" />

        <LinearLayout
            android:id="@+id/ll_inventory_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_copy_list"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistics_inventory_btn_to_list"
                android:textColor="?attr/colorOnSurface" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_see_all"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistics_inventory_btn_see_all"
                android:textColor="@color/custom_main" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>